--- a/Frontend/src/app/features/projects/project-list/project-list.html
+++ b/Frontend/src/app/features/projects/project-list/project-list.html
@@ -34,6 +34,7 @@
 
         <div class="project-actions">
           <a [routerLink]="['/projects', project.id]" class="btn-secondary">View</a>
+          <a [routerLink]="['/projects', project.id, 'board']" class="btn-secondary">Board</a>
             <button (click)="openDeleteModal(project)" class="btn-danger">Delete</button>
         </div>
       </div>
