--- a/Frontend/src/app/shared/components/sidebar/sidebar.css
+++ b/Frontend/src/app/shared/components/sidebar/sidebar.css
@@ -4,10 +4,10 @@
   color: white;
   display: flex;
   flex-direction: column;
-  height: calc(100vh - 60px);
+  height: calc(100vh - 72px);
   position: fixed;
   left: 0;
-  top: 60px;
+  top: 72px;
   box-shadow: 2px 0 4px rgba(0, 0, 0, 0.1);
   z-index: 99;
   transition: transform 0.3s ease;
@@ -153,7 +153,7 @@
 
 .btn-logout-sidebar .label {
   flex: 1;
-  text-align: left;
+  text-align: center;
 }
 
 
